[package]
name = "fastgpt"
version = "0.2.0"
edition = "2021"
description = "A CLI client for Kagi's FastGPT API"
license = "MIT"
repository = "https://github.com/0xgingi/kagi-fastgpt-cli"
homepage = "https://github.com/0xgingi/kagi-fastgpt-cli"
documentation = "https://github.com/0xgingi/kagi-fastgpt-cli"
readme = "README.md"
keywords = ["kagi", "fastgpt", "cli", "ai", "search"]
categories = ["command-line-utilities", "web-programming"]
authors = ["0xGingi <0xgingi@0xgingi.com>"]

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "3.0"
rustyline = "16.0"
uuid = { version = "1.17", features = ["v4"] }
dirs = "6.0"
toml = "0.9"
html-escape = "0.2"
regex = "1.11.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_arch = "arm")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
